--- a/styles/Profile.module.css
+++ b/styles/Profile.module.css
@@ -579,6 +579,11 @@ p.invite-text {
         grid-template-columns: 1fr;
     }
 
+    p.invite-title {
+        font-size: 1.5rem;
+        padding-top: 1rem;
+    }
+
 }
 
 
@@ -588,4 +593,8 @@ p.invite-text {
         padding-top: 1rem;
     }
 
+    p.invite-title {
+        font-size: 1.5rem;
+        padding-top: 1rem;
+    }
 }
