--- a/styles/Profile.module.css
+++ b/styles/Profile.module.css
@@ -258,6 +258,10 @@
     max-width: 600px;
 }
 
+.proposals.lg {
+    max-width: 800px;
+}
+
 .resume-header {
     display: flex;
     justify-content: space-between;
