--- a/styles/Skeleton.module.css
+++ b/styles/Skeleton.module.css
@@ -15,6 +15,13 @@
     max-width: 500px;
     width: 100%;
     height: 100%;
+}
+
+.job.page {
+    padding: 6rem 0;
+    max-width: 700px;
+    border: 0;
+    height: 100%;
     max-height: calc(100vh - 2rem);
 }
 
@@ -43,6 +50,10 @@
 
 .tuttor h1 {
     width: 40%;
+}
+
+.job.page h1 {
+    width: 50%;
 }
 
 .text,
@@ -172,10 +183,20 @@
 }
 
 @media (max-width: 768px) {
+    .job.page {
+        padding: 5rem 3rem 3rem;
+    }
+
     .my-job__header {
         flex-direction: column;
         gap: 1rem;
         align-items: flex-start;
+    }
+}
+
+@media (max-width: 500px) {
+    .job.page {
+        padding: 5rem 2rem 3rem;
     }
 }
 
