--- a/styles/Skeleton.module.css
+++ b/styles/Skeleton.module.css
@@ -14,7 +14,7 @@
     padding: 1.5rem;
     max-width: 500px;
     width: 100%;
-    height: 100%;
+    min-height: calc(100vh - 2rem);
 }
 
 .job.page {
